fixed alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -150,11 +150,13 @@ main{
 	/* display: flexbox; */
 	align-items: center;
 	/* place-items:  center; */
-	display: flexbox;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 #enemy-info > div > h6{
-	height: 100%;
+	/* height: 100%; */
 	margin: 0;
 }
 
